<resources>
    <string name="app_name">Quiz App</string>
    <string name="world_Knowledge">Let\'s test your World knowledge</string>
    <string name="denmark_PM">(1) Who is the current Prime Minister of Denmark?</string>
    <string name="helle_thorning_schmidt">Helle Thorning-Schmidt</string>
    <string name="capitla_Of_Brazil">(2) What is the capitla of Brazil?</string>
    <string name="theresa_may">Theresa May</string>
    <string name="capital">capital</string>
    <string name="women_Leaders">(3) Which countries have/had women leaders representing their countries?</string>
    <string name="germany1">Germany</string>
    <string name="united_states">United States</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="england">England</string>
    <string name="uk_gov">(4) What type of government does United Kingdom have?</string>
    <string name="constitutional_monarchy">Constitutional monarchy</string>
    <string name="constitutional_federal_republic">Constitutional Federal Republic</string>
    <string name="parliamentary_republic">Parliamentary Republic</string>
    <string name="world_War_II_End">(5) When did World War II end?</string>
    <string name="september_2_1945">September 2, 1945</string>
    <string name="august_18_1918">August 18, 1918</string>
    <string name="africa_a_country">(6) Africa is a country.</string>
    <string name="silk_Road_Cities">(7) Which cities are along the Silk Road?</string>
    <string name="madras">Madras</string>
    <string name="aleppo">Aleppo</string>
    <string name="jeddah">Jeddah</string>
    <string name="zanzibar">Zanzibar</string>
    <string name="denver">Denver</string>
    <string name="santiago">Santiago</string>
    <string name="opec_Stand_For">(8) What does OPEC stand for?</string>
    <string name="mexico_Language">(9) What is the primary language spoken in Mexico?</string>
    <string name="spoken_widelyUS">It\'s widely spoken in the U.S.</string>
    <string name="organization">Organization</string>
    <string name="nafta_Countries">(10) Which countries are part of NAFTA?</string>
    <string name="chile_argentina_peru">Chile, Argentina, Peru</string>
    <string name="usa_canada_mexico">USA, Canada, Mexico</string>
    <string name="usa_canada_united_kingdom">USA, Canada, United Kingdom</string>
    <string name="china_india_pakistan">China, India, Pakistan</string>
    <string name="soft_Power">(11) Bonus: What is soft power and why is it necessary?</string>
    <string name="think_being_nice">Think being nice</string>
    <string name="your_Score_Is">Your score is out of 10!</string>
</resources>
