<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.example.android.justjava.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/world_Knowledge"
            android:textAllCaps="true"
            android:textColor="#1E88E5"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/correctDenmarkPm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/denmark_Pm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/denmark_PM"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/helleThorn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="10dp"
                android:text="@string/helle_thorning_schmidt" />

            <RadioButton
                android:id="@+id/theresaMay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:paddingLeft="10dp"
                android:text="@string/theresa_may" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/capital_Brazil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/capitla_Of_Brazil"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:hint="@string/capital"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/womenLeaders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/women_Leaders"
                android:textSize="15sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/germany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="15dp"
                android:text="@string/germany1" />

            <CheckBox
                android:id="@+id/theStates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="15dp"
                android:text="@string/united_states" />

            <CheckBox
                android:id="@+id/bangla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="15dp"
                android:text="@string/bangladesh" />

            <CheckBox
                android:id="@+id/englandMay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:paddingLeft="15dp"
                android:text="@string/england" />

            <TextView
                android:id="@+id/govUk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/uk_gov"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/theRightEngGov"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/constMon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="15dp"
                    android:text="@string/constitutional_monarchy" />

                <RadioButton
                    android:id="@+id/constFedRep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="15dp"
                    android:text="@string/constitutional_federal_republic" />
            </RadioGroup>

            <TextView
                android:id="@+id/wWII"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/world_War_II_End"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/correctWorldWarDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/sep2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="15dp"
                    android:text="@string/september_2_1945" />

                <RadioButton
                    android:id="@+id/aug18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:paddingLeft="15dp"
                    android:text="@string/august_18_1918" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/afCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/africa_a_country"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/africa_country"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/afCountT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="15dp"
                    android:text="True" />

                <RadioButton
                    android:id="@+id/afCountF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:paddingLeft="15dp"
                    android:text="False" />
            </RadioGroup>

            <TextView
                android:id="@+id/citiesSilkRoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/silk_Road_Cities"
                android:textSize="15sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/silkMadras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="15dp"
                android:text="@string/madras" />

            <CheckBox
                android:id="@+id/silkBaku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="15dp"
                android:text="Baku" />

            <CheckBox
                android:id="@+id/silkDen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="15dp"
                android:text="@string/denver" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/opecStand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/opec_Stand_For"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/opecOrg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/organization"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/mexLan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/mexico_Language"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/mexLanAns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/spoken_widelyUS"
                android:inputType="text" />

            <TextView
                android:id="@+id/naftaCountries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/nafta_Countries"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/nafta_Countries1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/naftaCountriesOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:paddingLeft="15dp"
                    android:text="@string/chile_argentina_peru" />

                <RadioButton
                    android:id="@+id/naftaCountriesTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="15dp"
                    android:text="@string/usa_canada_mexico" />

                <RadioButton
                    android:id="@+id/naftaCountriesThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="15dp"
                    android:text="@string/usa_canada_united_kingdom" />

            </RadioGroup>

            <TextView
                android:id="@+id/softPowerBonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/soft_Power"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/softPowerAns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/think_being_nice"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <Button
            android:id="@+id/scoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/yourTotalScoreIs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_Score_Is" />
    </LinearLayout>
</ScrollView>